--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lina-belle",
   "version": "1.0.0",
-  "description": "",
+  "description": "lina belle",
   "main": "index.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
